[gd_scene load_steps=14 format=2]

[ext_resource path="res://Bounce test/Bouncing ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/Rot_helper.gd" type="Script" id=2]
[ext_resource path="res://main/Inf_pole.gd" type="Script" id=3]
[ext_resource path="res://library/Pole.tscn" type="PackedScene" id=4]
[ext_resource path="res://library/assest_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://assests/Organo font/Organo.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=3]
custom_solver_bias = 1.0
extents = Vector2( 240, 427 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0.811765, 1, 1 )

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 6.07171, 1, 5.66777 )

[sub_resource type="ProceduralSky" id=7]
sky_top_color = Color( 0.827451, 0, 1, 1 )
ground_bottom_color = Color( 0.247059, 0.0352941, 0.301961, 1 )
ground_horizon_color = Color( 0.0352941, 0.0431373, 0.588235, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 7 )
background_color = Color( 0.0313726, 0, 1, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ss_reflections_enabled = true
ssao_enabled = true
ssao_radius = 2.38
ssao_intensity = 2.35
dof_blur_far_quality = 2
adjustment_brightness = 1.09
adjustment_saturation = 0.83

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Pole" type="Spatial" parent="."]
transform = Transform( 0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984808, 0, -12.694, 0 )
script = ExtResource( 2 )

[node name="Pole" parent="Pole" instance=ExtResource( 4 )]

[node name="Pole2" parent="Pole" instance=ExtResource( 4 )]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, -20, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="Control"]
shape = SubResource( 3 )

[node name="Score_Label" type="Label" parent="Control"]
unique_name_in_owner = true
margin_left = 176.0
margin_top = 24.0
margin_right = 216.0
margin_bottom = 40.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 9 )
align = 1

[node name="Debug_camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20.562 )
far = 8192.0

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 10, 0, 0, 0, 1, 0, 7.30604, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="assest_1" parent="MeshInstance" instance=ExtResource( 5 )]
transform = Transform( -0.0483442, 0, -0.998831, 0, 0.1, 0, 0.998831, 0, -0.0483442, 0, -1, 0 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.00409, 9.5 )
doppler_tracking = 2
current = true
target = NodePath("../Follower")
speed = 10.0
enabled = true
process_mode = 0

[node name="Follower" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 1.00409, 9.5 )

[node name="Area" type="Area" parent="Follower"]

[node name="CollisionShape" type="CollisionShape" parent="Follower/Area"]
transform = Transform( 1, 0, 0, 0, 0.906308, -0.422618, 0, 0.422618, 0.906308, 0, 4.14828, -8.33717 )
shape = SubResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.00409162, 1.5 )

[node name="DirectionalLight" type="DirectionalLight" parent="Player"]
transform = Transform( 5, 0, 0, 0, 2.09528, 4.5398, 0, -4.5398, 2.09528, 0, 12.8759, 26.1229 )
light_specular = 0.665
light_bake_mode = 2
directional_shadow_blend_splits = true
directional_shadow_max_distance = 94.5

[node name="OmniLight" type="OmniLight" parent="Player"]
omni_range = 2.0258

[node name="GIProbe" type="GIProbe" parent="Player"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, -0.0204581, -7.5 )
extents = Vector3( 11.397, 11.6215, 11.9421 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Control/TouchScreenButton" to="Pole" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Control/TouchScreenButton" to="Pole" method="_on_TouchScreenButton_released"]
[connection signal="body_entered" from="Follower/Area" to="." method="_on_Area_body_entered"]
[connection signal="spawn" from="Player" to="." method="_on_Player_spawn"]
